--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -5,6 +9,9 @@
 
 .main{
      background-image:url(images/background.jpg);
+     background-position: center center;
+     background-size: max(1200px,100vw);
+     background-repeat: no-repeat;
      height:80vh;
      position: relative;
 }
@@ -15,4 +22,40 @@
     background-color: black;
     position: absolute;
     top:0;
+}
+nav{
+    display: flex;
+    max-width: 60vw;
+    margin: auto;
+    justify-content: space-between;
+    justify-items: center;
+    height: 62px;
+}
+nav img{
+    color: red;
+    width: 114px;
+    position: relative;
+    z-index: 10;
+}
+nav button{
+    position: relative;
+    z-index: 10;
+}
+.hero{
+    font-family:"Martel Sans", sans-serif;
+    height:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color:white;
+    position:relative;
+}
+.hero :first-child{
+    font-weight: bolder;
+    font-size: 48px;
+}
+.hero :nth-child(2){
+    font-weight: 900;
+    font-size: 48px;
 }
