--- a/style.css
+++ b/style.css
@@ -6,36 +6,40 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: black;
+}
 
 .main{
      background-image:url(images/background.jpg);
      background-position: center center;
      background-size: max(1200px,100vw);
      background-repeat: no-repeat;
-     height:80vh;
+     height:100vh;
      position: relative;
 }
 .main .box{
-    height: 80vh;
+    height: 100vh;
     width: 100%;
-    opacity: 0.4;
+    opacity: 0.6;
     background-color: black;
     position: absolute;
     top:0;
 }
 nav{
     display: flex;
-    max-width: 60vw;
+    max-width: 70vw;
     margin: auto;
     justify-content: space-between;
     justify-items: center;
     height: 62px;
+    padding-top: 18px;
 }
 nav img{
     color: red;
     width: 114px;
     position: relative;
-    z-index: 10;
+    z-index: 10; 
 }
 nav button{
     position: relative;
@@ -50,12 +54,26 @@ nav button{
     flex-direction: column;
     color:white;
     position:relative;
+    padding: 30px;
 }
-.hero :first-child{
+.hero> :first-child{
     font-weight: bolder;
-    font-size: 48px;
+    font-size: 50px;
+    text-align: center;
 }
-.hero :nth-child(2){
+.hero> :nth-child(2){
     font-weight: 900;
     font-size: 48px;
+    text-align: center;
+}
+
+.hero> :nth-child(3){
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+}
+.hero> :nth-child(4){
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
 }
