--- a/style.css
+++ b/style.css
@@ -138,3 +138,44 @@ nav button {
     justify-content: center;
     gap: 16px;
 }
+.first{
+    display: flex;
+    justify-content: center;
+    max-width: 70vw;
+    margin: auto;
+    color:white ;
+    align-items: center;
+}
+.secimg{
+    position: relative;
+}
+.secimg img{
+    width:30vw;
+    position: relative;
+    z-index: 10;
+    top:30px;
+}
+.secimg video{
+    position: absolute;
+    top: 51px;
+    right: 0;
+    height:230px;
+}
+section.first > div{
+    display: flex;
+    flex-direction: column;
+}
+.first > div :nth-child(1){
+    font-family: "Poppins", sans-serif; 
+    font-size: 48px;
+    font-weight: bolder;
+}
+.first > div :nth-child(2){
+    font-family: "Poppins", sans-serif; 
+    font-size: 21px;
+    font-weight: 200;
+}
+.second{
+    position: relative;
+    top: 70px;
+}
