--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav {
 
 nav img {
     color: red;
-    width: 114px;
+    width: 150px;
     position: relative;
     z-index: 10;
 }
@@ -102,189 +102,368 @@ nav button {
     height: 9px;
     background-color: rgb(46, 44, 44);
 }
-.btn{
-    padding:3px 8px;
+
+.btn {
+    padding: 3px 8px;
     font-weight: 400;
-    color: white ;
+    color: white;
     border: 1px solid white;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.092);
     cursor: pointer;
 }
-.btn-red{
-      font-weight: 400;
-      background-color: red;
-      color: white;
-      padding: 3px 24px;
-      font-size: 20px;
-      border-radius: 4px;
+
+.btn-red {
+    font-weight: 400;
+    background-color: red;
+    color: white;
+    padding: 3px 24px;
+    font-size: 20px;
+    border-radius: 4px;
 }
-.btn-red-sm{
+
+.btn-red-sm {
     background-color: red;
     color: white;
 }
-.main input{
+
+.main input {
     padding: 7px 101px 8px 14px;
     font-weight: 500;
     color: white;
-      font-size: 12px;
-      border-radius: 4px;
-      background-color: rgba(23, 23, 23, 0.7);
-      border: 1px solid rgba(246, 238, 238, 0.5)
+    font-size: 12px;
+    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 0.7);
+    border: 1px solid rgba(246, 238, 238, 0.5)
 }
-.hero-buttons{
+
+.hero-buttons {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 16px;
 }
-.first{
+
+.first {
     display: flex;
     justify-content: center;
     max-width: 70vw;
     margin: auto;
-    color:white ;
+    color: white;
     align-items: center;
 }
-.secimg{
+
+@media screen and (max-width: 1355px) {
+    .first {
+        flex-wrap: wrap;
+    }
+    .first>div :nth-child(1) {
+        font-family: "Poppins", sans-serif;
+        font-size: 48px;
+        font-weight: bolder;
+        position: relative;
+        top: 52px;
+    }
+    
+    .first>div :nth-child(2) {
+        font-family: "Poppins", sans-serif;
+        font-size: 21px;
+        font-weight: 200;
+        position: relative;
+        top: 52px;
+    }
+
+    .second {
+        flex-wrap: wrap;
+    }
+
+    .third {
+        flex-wrap: wrap;
+    }
+
+    .fourth {
+        flex-wrap: wrap;
+    }
+
+    .main {
+        background-size: 3500px;
+    }
+
+    .third>div :nth-child(1) {
+        font-family: "Poppins", sans-serif;
+        font-size: 48px;
+        font-weight: bolder;
+        position: relative;
+        top: 126px;
+    }
+
+    .third>div :nth-child(2) {
+        font-family: "Poppins", sans-serif;
+        font-size: 21px;
+        font-weight: 200;
+        position: relative;
+        top: 128px;
+    }
+    .secimg3 video {
+        position: relative;
+        bottom: 271px;
+        left: 20px;
+        height: 230px;
+        
+    }
+    .secimg video {
+        position: absolute;
+        top: 120px;
+        right: 60px;
+        height: 230px;
+    }
+    
+    
+}
+
+.secimg {
     position: relative;
 }
-.secimg img{
-    width:34vw;
+
+.secimg img {
+    width: 555px;
     position: relative;
     z-index: 10;
-    top:36px;
+    top: 36px;
 }
-.secimg video{
+
+.secimg video {
     position: absolute;
     top: 120px;
-    right: 40px;
-    height:230px;
+    right: 60px;
+    height: 230px;
 }
-section.first > div{
+
+section.first>div {
     display: flex;
     flex-direction: column;
 }
-.first > div :nth-child(1){
-    font-family: "Poppins", sans-serif; 
+
+.first>div :nth-child(1) {
+    font-family: "Poppins", sans-serif;
     font-size: 48px;
     font-weight: bolder;
 }
-.first > div :nth-child(2){
-    font-family: "Poppins", sans-serif; 
+
+.first>div :nth-child(2) {
+    font-family: "Poppins", sans-serif;
     font-size: 21px;
     font-weight: 200;
 }
-.two{
+
+.two {
     position: relative;
     top: 100px;
     z-index: 10;
 }
-.secimg2 img{
+
+.secimg2 img {
     position: relative;
     top: 60px;
-   right: 20px;
+    right: 20px;
 
 }
-.three{
+
+.three {
     position: relative;
     top: 90px;
     z-index: 10;
 }
-.four{
+
+.four {
     position: relative;
     top: -21px;
     z-index: 10;
 }
-.secimg3 img{
+
+.secimg3 img {
     position: relative;
     top: 167px;
-   left: 30px;
-   z-index: 10;
+    left: 30px;
+    z-index: 10;
 
 }
-.secimg3 video{
+
+.secimg3 video {
     position: relative;
     bottom: 271px;
     left: 20px;
-    height:230px;
+    height: 230px;
 }
-.second{
+
+.second {
     display: flex;
     justify-content: center;
     max-width: 70vw;
     margin: auto;
-    color:white ;
+    color: white;
     align-items: center;
 }
-section.second > div{
+
+section.second>div {
     display: flex;
     flex-direction: column;
 }
-.second > div :nth-child(1){
-    font-family: "Poppins", sans-serif; 
+
+.second>div :nth-child(1) {
+    font-family: "Poppins", sans-serif;
     font-size: 45px;
     font-weight: bolder;
     padding-top: 80px;
 }
-.second > div :nth-child(2){
-    font-family: "Poppins", sans-serif; 
+
+.second>div :nth-child(2) {
+    font-family: "Poppins", sans-serif;
     font-size: 21px;
     font-weight: 200;
 }
-.third{
+
+.third {
     display: flex;
     justify-content: center;
     max-width: 70vw;
     margin: auto;
-    color:white ;
+    color: white;
     align-items: center;
 }
-section.third > div{
+
+section.third>div {
     display: flex;
     flex-direction: column;
 }
-.third > div :nth-child(1){
-    font-family: "Poppins", sans-serif; 
+
+.third>div :nth-child(1) {
+    font-family: "Poppins", sans-serif;
     font-size: 48px;
     font-weight: bolder;
 }
-.third > div :nth-child(2){
-    font-family: "Poppins", sans-serif; 
+
+.third>div :nth-child(2) {
+    font-family: "Poppins", sans-serif;
     font-size: 21px;
     font-weight: 200;
 }
-.fourth{
+
+.fourth {
     display: flex;
     justify-content: center;
     max-width: 70vw;
     margin: auto;
-    color:white ;
+    color: white;
     align-items: center;
 }
-section.fourth > div{
+
+section.fourth>div {
     display: flex;
     flex-direction: column;
 }
-.fourth > div :nth-child(1){
-    font-family: "Poppins", sans-serif; 
+
+.fourth>div :nth-child(1) {
+    font-family: "Poppins", sans-serif;
     font-size: 45px;
     font-weight: bolder;
     padding-top: 80px;
 }
-.fourth > div :nth-child(2){
-    font-family: "Poppins", sans-serif; 
+
+.fourth>div :nth-child(2) {
+    font-family: "Poppins", sans-serif;
     font-size: 21px;
     font-weight: 200;
 }
-.secimg4 img{
+
+.secimg4 img {
     position: relative;
     top: -23px;
-   right: 20px;
+    right: 20px;
 
 }
-.five{
+
+.five {
     position: relative;
     top: 28px;
+    z-index: 10;
+}
+
+.faq {
+    background-color: black;
+    color: white;
+}
+
+.faqbox:hover {
+    background-color: rgb(102, 100, 100);
+}
+
+.faqbox {
+    font-size: 24px;
+    display: flex;
+    background-color: rgb(57, 56, 56);
+    padding: 20px;
+    position: relative;
+    top: 60px;
+    max-width: 60vw;
+    align-items: center;
+    margin: 34px auto;
+    justify-content: space-between;
+    cursor: pointer;
+    color: white;
+}
+
+h1 {
+    font-size: 48px;
+    font-family: "Poppins", sans-serif;
+    position: relative;
+    top: 50px;
+    text-align: center;
+    padding: 5px 34px;
+}
+
+.six {
+    position: relative;
+    top: 60px;
+    z-index: 10;
+}
+
+footer {
+    color: white;
+    max-width: 60vw;
+    margin: auto;
+}
+
+footer span {
+    margin: 2px;
+    position: relative;
+    top: 130px;
+    font-size: 20px;
+
+}
+
+.footer {
+    position: relative;
+    top: 180px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: white;
+
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.seven {
+    position: relative;
+    top: 250px;
     z-index: 10;
 }
